pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-191-html_blocks.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/191-html_blocks.md
---
[32m<table>
[0m
[32m  [0m[32m<tr>
[0m

[33m[48;5;236m<td>[K[0m
[33m[48;5;236m  Hi[K[0m
[33m[48;5;236m</td>[K[0m


[32m  [0m[32m</tr>
[0m
[32m</table>
[0m
