pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-227-blank_lines.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/227-blank_lines.md
---
aaa

]1337;SetMark\
[94m[104m [0m[1m[97m[104maaa[0m
